--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": ">=8.1",
+        "symfony/deprecation-contracts": "^2.5|^3",
         "symfony/http-client": "^5.4|^6.0|^7.0",
         "symfony/notifier": "^6.2.7|^7.0"
     },
